--- a/game.css
+++ b/game.css
@@ -1,69 +1,109 @@
-*{
+* {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
-h1{
+
+h1 {
     background-color: rgb(72, 42, 42);
-    color: #fff;
+    color: white;
     text-align: center;
-    justify-content: center;
     height: 4rem;
     line-height: 4rem;
-
 }
 
-.choice{
-    height: 165px;
-    width: 165px;
-}
-
-img{
-    height: 170px;
-    width: 150px;
-    object-fit: cover;
-    border-radius: 50%;
-}
-.choices{
+/* Choices */
+.choices {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 4rem;
     margin-top: 4rem;
 }
-.choice:hover{
+
+.choice {
+    width: 165px;
+    height: 165px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.choice:hover {
     opacity: 0.6;
     cursor: pointer;
-
 }
-.score-board{
+
+img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+/* Subheading */
+.sub-heading {
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    margin-top: 3rem;
+    color: #151414;
+}
+
+/* Scoreboard */
+.score-board {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 4rem;
     font-size: 25px;
     font-weight: bold;
-    margin-top: 10rem;
+    margin-top: 3rem;
 }
 
 #user-score,
-#comp-score{
-    font-size: 25px;
+#comp-score {
     text-align: center;
-    
-}
-#msg{
-    color: #fff;
-    background-color:rgb(15, 14, 14);
     font-size: 25px;
-    justify-content: center;
-    text-align: center;
-    margin-top: 5rem;
-    display: inline;
-    padding: 1rem;
-    border-radius: 1rem;;
 }
-.msg-container{
+
+/* Message */
+.msg-container {
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+    margin-top: 5rem;
+}
+
+#msg {
+    background-color: black;
+    color: white;
+    padding: 1rem;
+    font-size: 25px;
+    border-radius: 1rem;
+}
+
+/* Mobile layout */
+@media (max-width: 600px) {
+
+    .choices {
+        flex-direction: column;
+        gap: 2rem;
+    }
+
+    .choice {
+        width: 140px;
+        height: 140px;
+    }
+
+    .score-board {
+        flex-direction: column;
+        gap: 1.5rem;
+        font-size: 18px;
+    }
+
+    #msg {
+        font-size: 16px;
+        width: 80%;
+        text-align: center;
+    }
 }
